<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoginPage</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="user_name_">User Name:</string>
    <string name="password_">Password:</string>
    <string name="login">Login</string>
    <string name="first_name_">first_name_</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="address">Address</string>
    <string name="open_new_screen">Open New Screen</string>
    <string name="guest_user">Guest User</string>
    <string name="sign_up">Sign Up</string>
    <string name="spin">Financial Limit</string>
    <string-array name="spinnerItems">
        <item>Medium</item>
        <item>Low</item>
        <item>High</item>
        <item>Economical with Aid</item>
    </string-array>

</resources>
