<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <!--  Sign Up Button -->
   
   <!--  	Guest User -->  

    <!-- User Name   -->

   
    <!-- PassWord -->
    

    
    <!-- Login Button -->
     <TextView
        android:id="@+id/tv_error"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:textSize="7pt"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginRight="9dip"
        android:layout_marginTop="15dip"
        android:layout_marginLeft="15dip"
        android:textColor="#AA0000"
        android:text=""/>
     
     <EditText
         android:id="@+id/et_username"
         android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/tv_error"
         android:layout_alignTop="@+id/tv_username"
         android:background="@android:drawable/editbox_background"
         android:ems="10"
         tools:ignore="ObsoleteLayoutParam" android:inputType="none"/>     

     <EditText
         android:id="@+id/et_password"
         android:layout_width="150dip"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/et_username"
         android:layout_alignTop="@+id/tv_password"
         android:background="@android:drawable/editbox_background"
         android:ems="10"
         android:password="true"
         tools:ignore="Deprecated" android:inputType="none"/>

          <TextView
         android:id="@+id/tv_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_username"
         android:layout_marginTop="27dp"
         android:layout_toLeftOf="@+id/et_password"
         android:text="@string/password_"
         android:textColor="#444444"
         android:textSize="10pt"
         tools:ignore="HardcodedText,ObsoleteLayoutParam" />

     <Button
         android:id="@+id/guestbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:text="Employer"
         tools:ignore="HardcodedText" />

     <Button
         android:id="@+id/signupbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/guestbtn"
         android:text="@string/sign_up"
         tools:ignore="HardcodedText" />

     <TextView
         android:id="@+id/tv_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/tv_password"
         android:layout_below="@+id/signupbtn"
         android:layout_marginTop="30dp"
         android:text="@string/user_name_"
         android:textColor="#444444"
         android:textSize="10pt" />

     <Button
         android:id="@+id/btn_login"
         android:layout_width="100dip"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:text="@string/login" />

</RelativeLayout>